updated links to doc-article "Extensions scripts"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1017 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1,4 +1,4 @@
-# Sample configuration file for NZBGet
+queen.2014.720p.bluray.x264-wiki.mkv# Sample configuration file for NZBGet
 #
 # On POSIX put this file to one of the following locations:
 # ~/.nzbget
@@ -80,7 +80,7 @@ WebDir=
 
 # Directory with post-processing and other scripts.
 #
-# NOTE: For information on writing scripts visit http://nzbget.net/Scripts.
+# NOTE: For information on writing scripts visit http://nzbget.net/Extension_scripts.
 ScriptDir=${MainDir}/scripts
 
 # Lock-file for daemon-mode, POSIX only.
@@ -985,7 +985,7 @@ UpdateInterval=200
 # The rest of the description is for command "Script".
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 #
 # NZBGet passes following arguments to scheduler script as environment
 # variables:
@@ -1000,7 +1000,7 @@ UpdateInterval=200
 # always in lower case.
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 #Task1.Param=
 
 #Task2.Time=20:00
@@ -1208,7 +1208,7 @@ SevenZipCmd=7z
 #
 # INFO FOR DEVELOPERS:
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 #
 # NZBGet passes following arguments to post-processing script as environment
 # variables:
@@ -1296,7 +1296,7 @@ SevenZipCmd=7z
 # All other return codes are interpreted as failure (status = FAILURE).
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 PostScript=
 
 # List of scan scripts to execute before a nzb-file is added to queue.
@@ -1317,7 +1317,7 @@ PostScript=
 #
 # INFO FOR DEVELOPERS:
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 #
 # NZBGet passes following arguments to the script as environment
 # variables:
@@ -1401,7 +1401,7 @@ PostScript=
 # saved into incoming nzb-directory and then processed by the script.
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 ScanScript=
 
 # List of queue scripts to execute after a nzb-file is added to queue.
@@ -1419,7 +1419,7 @@ ScanScript=
 #
 # INFO FOR DEVELOPERS:
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 #
 # NZBGet passes following arguments to the queue script as environment
 # variables:
@@ -1457,7 +1457,7 @@ ScanScript=
 # "$NZBOP_APPBIN" -c "$NZBOP_CONFIGFILE" -E FR P "$NZBNA_NZBNAME/.*\.nzb";
 #
 # NOTE: This is a short documentation, for more information visit
-# http://nzbget.net/Scripts.
+# http://nzbget.net/Extension_scripts.
 QueueScript=
 
 # Execution order for scripts.
