fixed small memory leak (bug introduced in r1012)
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1021 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1,4 +1,4 @@
-queen.2014.720p.bluray.x264-wiki.mkv# Sample configuration file for NZBGet
+# Sample configuration file for NZBGet
 #
 # On POSIX put this file to one of the following locations:
 # ~/.nzbget
