renamed section "SCRIPTS" to "EXTENSION SCRIPTS" in the settings
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1025 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1177,7 +1177,7 @@ SevenZipCmd=7z
 
 
 ##############################################################################
-### SCRIPTS                                                                ###
+### EXTENSION SCRIPTS                                                      ###
 
 # Default list of post-processing scripts to execute after the download
 # of nzb-file is completed and possibly par-checked/repaired and unpacked.
