--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1053,11 +1053,12 @@ ParRepair=yes
 # issues. Please apply the patches to libpar2 and recompile it.
 ParScan=auto
 
-# Check for renamed files (yes, no).
+# Check for renamed and missing files (yes, no).
 #
 # Par-rename restores original file names using information stored
-# in par2-files. When enabled the par-rename is performed as the first
-# step of post-processing for every nzb-file.
+# in par2-files. It also detects missing files (files listed in
+# par2-files but not present on disk). When enabled the par-rename is
+# performed as the first step of post-processing for every nzb-file.
 #
 # Par-rename is very fast and is highly recommended, especially if
 # unpack is disabled.
