post-processing scripts now have two new parameters: env. var "NZBPP_STATUS" indicates the status of download including the total status (SUCCESS, FAILURE, etc.) and the detail field (for example in case of failures: PAR, UNPACK, etc.); env. var "NZBPP_TOTALSTATUS" is equal to the total status of parameter "NZBPP_STATUS" and is provided for convenience (to avoid parsing of "NZBPP_STATUS"); the new parameters provide a simple way for pp-scripts to determine download status without a guess work needed in previous versions; parameters "NZBPP_PARSTATUS" and "NZBPP_UNPACKSTATUS" are now considered deprecated (still passed for compatibility); updated script "EMail.py" to use new parameters "NZBPP_TOTALSTATUS" and "NZBPP_STATUS" instead of "NZBPP_PARSTATUS" and "NZBPP_UNPACKSTATUS"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1031 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1221,6 +1221,21 @@ SevenZipCmd=7z
 #                       may include full path;
 #  NZBPP_FINALDIR     - final destination path if set by one of previous pp-scripts;
 #  NZBPP_CATEGORY     - category assigned to nzb-file (can be empty string);
+#  NZBPP_TOTALSTATUS  - total status of nzb-file:
+#                       SUCCESS - everything OK;
+#                       WARNING - download is damaged but probably can
+#                                 be repaired; user intervention is
+#                                 required;
+#                       FAILURE - download has failed or a serious error
+#                                 occured during post-processing (unpack, par);
+#                       DELETED - download was deleted; post-processing
+#                                 are usually not called in this case;
+#                                 however it's posisble to force calling
+#                                 scripts with command "post-process again";
+#  NZBPP_STATUS       - complete status info for nzb-file: it consists
+#                       of total status and status detail separated with
+#                       slash, for example: "FAILURE/UNPACK"; for possible
+#                       status details see documentation on web site;
 #  NZBPP_HEALTH       - download health: an integer value in the range
 #                       from 0 (all articles failed) to 1000 (all articles
 #                       successfully downloaded);
@@ -1232,22 +1247,6 @@ SevenZipCmd=7z
 #                       of nzb-file were par-files its critical health
 #                       would be 0. If NZBPP_HEALTH goes down below
 #                       NZBPP_CRITICALHEALTH the download becomes unrepairable;
-#  NZBPP_PARSTATUS    - result of par-check:
-#                       0 = not checked: par-check is disabled or nzb-file does
-#                           not contain any par-files;
-#                       1 = checked and failed to repair;
-#                       2 = checked and successfully repaired;
-#                       3 = checked and can be repaired but repair is disabled;
-#                       4 = par-check needed but skipped (option ParCheck=manual);
-#  NZBPP_UNPACKSTATUS - result of unpack:
-#                       0 = unpack is disabled or was skipped due to nzb-file
-#                           parameters or due to errors during par-check;
-#                       1 = unpack failed;
-#                       2 = unpack successful;
-#                       3 = write error (usually not enough disk space);
-#                       4 = wrong password (only for rar5 archives);
-#  NZBPP_HEALTHDELETED - indicates if nzb-file was deleted by health
-#                       check (1);
 #  NZBPP_TOTALARTICLES - number of articles in nzb-file;
 #  NZBPP_SUCCESSARTICLES - number of successfully downloaded articles;
 #  NZBPP_FAILEDARTICLES - number of failed articles;
