post-processing scripts which move the whole download into a new location can inform the program about new location using command "[NZB] DIRECTORY=/new/path", allowing other scripts to process files further
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1034 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1227,15 +1227,22 @@ SevenZipCmd=7z
 #                                 be repaired; user intervention is
 #                                 required;
 #                       FAILURE - download has failed or a serious error
-#                                 occured during post-processing (unpack, par);
+#                                 occurred during post-processing (unpack, par);
 #                       DELETED - download was deleted; post-processing
-#                                 are usually not called in this case;
-#                                 however it's posisble to force calling
+#                                 scripts are usually not called in this case;
+#                                 however it's possible to force calling
 #                                 scripts with command "post-process again";
 #  NZBPP_STATUS       - complete status info for nzb-file: it consists
 #                       of total status and status detail separated with
 #                       slash, for example: "FAILURE/UNPACK"; for possible
 #                       status details see documentation on web site;
+#  NZBPP_SCRIPTSTATUS - summary status of the scripts executed before the
+#                       current one:
+#                       NONE - no other scripts were executed yet or all
+#                              of them have ended with exit code "NONE";
+#                       SUCCESS - all other scripts have ended with exit
+#                                 code "SUCCESS" ;
+#                       FAILURE - at least one of the script has failed;
 #  NZBPP_HEALTH       - download health: an integer value in the range
 #                       from 0 (all articles failed) to 1000 (all articles
 #                       successfully downloaded);
@@ -1276,7 +1283,17 @@ SevenZipCmd=7z
 # If the script moves files it can inform the program about new location
 # by printing special message into standard output (which is processed
 # by NZBGet):
+#   echo "[NZB] DIRECTORY=/path/to/moved/files";
+# or:
 #   echo "[NZB] FINALDIR=/path/to/moved/files";
+#
+# Command "DIRECTORY" changes the destiantion path of the download and
+# affects the scripts executed after the current script as well as the
+# program code itself, for example the command "Post-process again"
+# will work on new location. Command "FINALDIR" just sets a separate
+# property of the download and should be used when the files are moved
+# into an existing directory containg other files to avoid the processing
+# of those files by other scripts.
 #
 # To assign post-processing parameters:
 #   echo "[NZB] NZBPR_myvar=my value";
