added new choice "Always" for option "ParCheck"; it forces the par-check for every (even undamaged) download but in contrast to choice "Force" only one par2-file is downloaded first; additional files are downloaded if needed
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1036 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1012,20 +1012,24 @@ UpdateInterval=200
 ##############################################################################
 ### PAR CHECK/REPAIR                                                       ###
 
-# Whether and how par-verification must be performed (auto, force, manual).
+# Whether and how par-verification must be performed (auto, always, force, manual).
 #
 #  Auto   - par-check is performed when needed. One par2-file is always
 #           downloaded. Additional par2-files are downloaded if needed
 #           for repair. Repair is performed if the option <ParRepair>
 #           is enabled;
+#  Always - check every download (even undamaged). One par2-file is
+#           always downloaded. Additional par2-files are downloaded
+#           if needed for repair.  Repair is performed if the option 
+#           <ParRepair> is enabled;
 #  Force  - force par-check for every download (even undamaged). All
 #           par2-files are always downloaded. Repair is performed if
 #           the option <ParRepair> is enabled;
 #  Manual - par-check is skipped. One par2-file is always
 #           downloaded. If a damaged download is detected, all
 #           par2-files are downloaded but neithet par-check nor par-repair
-#           take place. The download can be then repaired manually
-#           (possibly on another, faster computer).
+#           take place. The download can be then repaired manually,
+#           eventually on another faster computer.
 ParCheck=auto
 
 # Automatic par-repair after par-verification (yes, no).
