added option "ParIgnoreExt" which lists files which do not trigger par-repair if they are missing
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1037 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/nzbget.conf
+++ b/nzbget.conf
@@ -1068,7 +1068,22 @@ ParScan=auto
 # unpack is disabled.
 ParRename=yes
 
-# What to do if download health goes down below critical health (delete,
+# Files to ignore when looking for missing files.
+#
+# List of file extensions or file names to ignore by par-rename. The
+# entries must be separated with commas. The entries can be file
+# extensions or any text the file name may end with.
+#
+# If par-rename detects missing files it will ignore files matching
+# this option and will not initiate par-check/repair. This avoids
+# time costing par-check/repair for unimportant files.
+#
+# NOTE: Files matching the option <ExtCleanupDisk> are ignored as well.
+#
+# Example: .sfv, .nzb, .nfo
+ParIgnoreExt=.sfv, .nzb, .nfo
+
+# What to do if download health drops below critical health (delete,
 # pause, none).
 #
 #  Delete - delete nzb-file from queue. If option <DeleteCleanupDisk>
@@ -1126,7 +1141,7 @@ ParCleanupQueue=yes
 # Files to delete after successful check/repair.
 #
 # List of file extensions or file names to delete after successful
-# check/repair. The entries must be separated with commas. The entries 
+# download. The entries must be separated with commas. The entries 
 # can be file extensions or any text the file name may end with.
 #
 # Example: .par2, .sfv
