added article cache: new option "ArticleCache" defines memory limit to use for cache; when cache is active the articles are written into cache first and then all flushed to disk into the destination file; article cache reduces disk IO and may reduce file fragmentation improving post-processing speed (unpack); it works with both writing modes (direct write on and off); when option "DirectWrite" is disabled the cache should be big enough (for best performance) to accommodate all articles of one file (sometimes up to 500 MB) in order to avoid writing articles into temporary files, otherwise temporary files are used for articles which do not fill into cache; when used in combination with DirectWrite there is no such limitation and even a small cache (100 MB or even less) can be used effectively; when the cache becomes full it is flushed automatically (directly into destination file) providing room for new articles; new row in the "statistics and status dialog" in web-interface indicates the amount of memory used for cache; new fields "ArticleCacheLo", "ArticleCacheHi" and "ArticleCacheMB" returned by RPC-method "status"; refactor: parts of unit "ArticleDownloader" responsible for writing into disk were moved into new unit "ArticleWriter"
git-svn-id: svn://svn.code.sf.net/p/nzbget/code/trunk@1057 b1b436ca-2b18-4f33-ab5d-510789358d54

--- a/Makefile.am
+++ b/Makefile.am
@@ -54,6 +54,8 @@ nzbget_SOURCES = \
 	daemon/main/Scheduler.h \
 	daemon/nntp/ArticleDownloader.cpp \
 	daemon/nntp/ArticleDownloader.h \
+	daemon/nntp/ArticleWriter.cpp \
+	daemon/nntp/ArticleWriter.h \
 	daemon/nntp/Decoder.cpp \
 	daemon/nntp/Decoder.h \
 	daemon/nntp/NewsServer.cpp \
