--- a/nzbget.conf
+++ b/nzbget.conf
@@ -599,7 +599,7 @@ ReloadQueue=yes
 # rar-files), not about download-jobs (nzb-files) itself. Download-jobs are always
 # continued regardless of that option.
 #
-# Disabling this option might slighlty reduce disk access and is
+# Disabling this option may slighlty reduce disk access and is
 # therefore recommended on fast connections.
 ContinuePartial=yes
 
@@ -614,36 +614,80 @@ PropagationDelay=0
 # Decode articles (yes, no).
 #
 # yes - decode articles using internal decoder (supports yEnc and UU formats);
-# no - the articles will not be decoded and joined. Useful for debugging to
-#      look at article's source text.
+# no - articles will not be decoded/joined. Useful to look at article's source text.
+#
+# NOTE: This option is primary for debugging purposes. You should not
+# disable it.
 Decode=yes
+
+# Memory limit to use for article cache (megabytes).
+#
+# If you can dedicate few hundreds of megabytes for article cache it
+# can improve performance. First the amount of disk operations can be
+# significantly reduced. Second the created files are less
+# fragmented, which again speeds up the post-processing (unpacking).
+#
+# Value "0" disables article cache.
+#
+# In 32 bit mode the maximum allowed value is 1900.
+ArticleCache=0
 
 # Write decoded articles directly into destination output file (yes, no).
 #
-# Files are posted to Usenet in multiple pieces (articles). Each file typically
-# requires hundreds of articles.
+# This option is important if article cache (option <ArticleCache>) is
+# not active. When article cache is used this option have little effect.
+#
+# Files are posted to Usenet in multiple pieces (articles). Each file
+# typically consists of hundreds of articles.
 #
 # When option <DirectWrite> is disabled, the program downloads all articles
 # into temporary directory and then combines them into destination file.
 #
 # With this option enabled the program at first creates the output
 # destination file with required size (total size of all articles),
-# then writes on the fly decoded articles directly to the file
-# without creating of any temporary files.
+# then writes the decoded articles directly to the file without 
+# creating of any temporary files.
 #
-# This may improve performance but depends on OS and file system ability to
-# instantly create large files without initializing them with nulls. Such
-# files are called sparse files and are supported by modern file systems
-# like EXT3 on Linux or NTFS on Windows.
+# The direct write relies on the ability of file system to create 
+# empty files without allocating the space on the drive (sparse files),
+# which most modern file systems support including EXT3, EXT4
+# and NTFS. The notable exception is HFS+ (default file system on OSX).
 #
-# Using of this option reduces disk operations but may produce more fragmented
-# files (depends on disk driver), which may slow down the unpack.
+# The direct write usually improves performance by reducing the amount
+# of disk operations but may produce more fragmented files.
 #
-# NOTE: It's recommended to test how the option behave on your platform to find the
-# best setting. For test try to download few big nzb-files (each 4GB or more)
-# and measure the time used for download and unpack (use timestamps
-# in the log-file to determine when the unpack was ended).
+# NOTE: If article cache is not active it's recommended to test how
+# the option behaves on your platform. For a test try to download few
+# big nzb-files (each 4GB or more) and measure the time used for download
+# and unpack (use timestamps in the log-file to determine when the
+# unpack was ended).
 DirectWrite=yes
+
+# Memory buffer size per article (bytes).
+#
+# When downloaded articles are written into disk the OS collects
+# data in the internal buffer before flushing it into disk. This option
+# controls the size of this buffer (per article).
+#
+# Bigger values decrease disk-io, but increase memory usage. Value "0"
+# causes an OS-dependent default value to be used. With value "-1"
+# (which means "max/auto") the program sets the size of buffer according 
+# to the size of current article (typically less than 500K).
+#
+# To calculate the memory usage multiply WriteBufferSize by max number
+# of connections, configured in section "NEWS-SERVERS". Typical article's
+# size not exceed 500000 bytes, so using bigger values
+# (like several megabytes) will just waste memory, use "-1" instead.
+#
+# For desktop computers with large amount of memory value "-1" (max/auto)
+# is recommended, but for computers with very low memory (routers, NAS)
+# value "0" (default OS-dependent size) could be a better alternative.
+#
+# Write-buffer is managed by OS (system libraries) and therefore
+# the effect of the option is highly OS-dependent.
+#
+# NOTE: Also see option <ArticleCache>.
+WriteBufferSize=0
 
 # Check CRC of downloaded and decoded articles (yes, no).
 #
@@ -704,29 +748,6 @@ DownloadRate=0
 # run tests to determine how the option affects the CPU usage and the
 # download speed on a particular system.
 AccurateRate=no
-
-# Set the size of memory buffer used by writing the articles (bytes).
-#
-# Bigger values decrease disk-io, but increase memory usage.
-# Value "0" causes an OS-dependent default value to be used.
-# With value "-1" (which means "max/auto") the program sets the size of
-# buffer according to the size of current article (typically less than 500K).
-#
-# NOTE: The value must be written in bytes, do not use postfixes "K" or "M".
-#
-# NOTE: To calculate the memory usage multiply WriteBufferSize by max number
-# of connections, configured in section "NEWS-SERVERS".
-#
-# NOTE: Typical article's size not exceed 500000 bytes, so using bigger values
-# (like several megabytes) will just waste memory.
-#
-# NOTE: For desktop computers with large amount of memory value "-1" (max/auto)
-# is recommended, but for computers with very low memory (routers, NAS)
-# value "0" (default OS-dependent size) could be better alternative.
-#
-# NOTE: Write-buffer is managed by OS (system libraries) and therefore
-# the effect of the option is highly OS-dependent.
-WriteBufferSize=0
 
 # Pause if disk space gets below this value (megabytes).
 #
