--- a/Makefile.in
+++ b/Makefile.in
@@ -89,7 +89,7 @@ am_nzbget_OBJECTS = Connection.$(OBJEXT) TLS.$(OBJEXT) \
 	LoggableFrontend.$(OBJEXT) NCursesFrontend.$(OBJEXT) \
 	Maintenance.$(OBJEXT) nzbget.$(OBJEXT) Options.$(OBJEXT) \
 	Scheduler.$(OBJEXT) ArticleDownloader.$(OBJEXT) \
-	Decoder.$(OBJEXT) NewsServer.$(OBJEXT) \
+	ArticleWriter.$(OBJEXT) Decoder.$(OBJEXT) NewsServer.$(OBJEXT) \
 	NNTPConnection.$(OBJEXT) ServerPool.$(OBJEXT) \
 	StatMeter.$(OBJEXT) ParChecker.$(OBJEXT) \
 	ParCoordinator.$(OBJEXT) ParRenamer.$(OBJEXT) \
@@ -277,6 +277,8 @@ nzbget_SOURCES = \
 	daemon/main/Scheduler.h \
 	daemon/nntp/ArticleDownloader.cpp \
 	daemon/nntp/ArticleDownloader.h \
+	daemon/nntp/ArticleWriter.cpp \
+	daemon/nntp/ArticleWriter.h \
 	daemon/nntp/Decoder.cpp \
 	daemon/nntp/Decoder.h \
 	daemon/nntp/NewsServer.cpp \
@@ -593,6 +595,7 @@ distclean-compile:
 	-rm -f *.tab.c
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ArticleDownloader.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ArticleWriter.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/BinRpc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ColoredFrontend.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Connection.Po@am__quote@
@@ -878,6 +881,20 @@ ArticleDownloader.obj: daemon/nntp/ArticleDownloader.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/nntp/ArticleDownloader.cpp' object='ArticleDownloader.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ArticleDownloader.obj `if test -f 'daemon/nntp/ArticleDownloader.cpp'; then $(CYGPATH_W) 'daemon/nntp/ArticleDownloader.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/nntp/ArticleDownloader.cpp'; fi`
+
+ArticleWriter.o: daemon/nntp/ArticleWriter.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ArticleWriter.o -MD -MP -MF "$(DEPDIR)/ArticleWriter.Tpo" -c -o ArticleWriter.o `test -f 'daemon/nntp/ArticleWriter.cpp' || echo '$(srcdir)/'`daemon/nntp/ArticleWriter.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/ArticleWriter.Tpo" "$(DEPDIR)/ArticleWriter.Po"; else rm -f "$(DEPDIR)/ArticleWriter.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/nntp/ArticleWriter.cpp' object='ArticleWriter.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ArticleWriter.o `test -f 'daemon/nntp/ArticleWriter.cpp' || echo '$(srcdir)/'`daemon/nntp/ArticleWriter.cpp
+
+ArticleWriter.obj: daemon/nntp/ArticleWriter.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT ArticleWriter.obj -MD -MP -MF "$(DEPDIR)/ArticleWriter.Tpo" -c -o ArticleWriter.obj `if test -f 'daemon/nntp/ArticleWriter.cpp'; then $(CYGPATH_W) 'daemon/nntp/ArticleWriter.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/nntp/ArticleWriter.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/ArticleWriter.Tpo" "$(DEPDIR)/ArticleWriter.Po"; else rm -f "$(DEPDIR)/ArticleWriter.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='daemon/nntp/ArticleWriter.cpp' object='ArticleWriter.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o ArticleWriter.obj `if test -f 'daemon/nntp/ArticleWriter.cpp'; then $(CYGPATH_W) 'daemon/nntp/ArticleWriter.cpp'; else $(CYGPATH_W) '$(srcdir)/daemon/nntp/ArticleWriter.cpp'; fi`
 
 Decoder.o: daemon/nntp/Decoder.cpp
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT Decoder.o -MD -MP -MF "$(DEPDIR)/Decoder.Tpo" -c -o Decoder.o `test -f 'daemon/nntp/Decoder.cpp' || echo '$(srcdir)/'`daemon/nntp/Decoder.cpp; \
